# e2e_catalog

./: .gitignore  Dockerfile  Dockerfile_frontend  Dockerfile_llamacpp  README.md  app.py  catalog.db.wal  docker-compose.yml  index.html  init_db.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.node.json
scripts/: postgres.sql
server/: api.py  model.py  processors.py  sources.py  templates.py  utils.py
src/: main.tsx  store.tsx
src/components/: Plot.tsx
src/pages/Blacklist/: index.tsx
src/pages/ClosedSources/: index.tsx
src/pages/MainPage/: index.css  index.tsx
src/pages/NewDashboard/: index.tsx
src/pages/ReportList/: index.tsx
src/pages/ReportView/: index.tsx
src/pages/Welcome/: index.tsx
src/state/: userSlice.tsx
